--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "repository": "https://github.com/codewithkyle/simplytics.git",
     "author": "Kyle Andrews (http://codewithkyle.com/)",
     "license": "MIT",
-    "main": "simplytics.js",
-    "types": "./src/global.d.ts",
     "files": [
         "src",
         "lib"
@@ -29,14 +27,17 @@
     },
     "devDependencies": {
         "husky": "^0.14.3",
+        "npm-run-all": "^4.1.5",
         "tslint": "^5.14.0",
         "tslint-config-airbnb": "^5.11.1",
         "tslint-config-prettier": "^1.18.0",
         "typescript": "^3.3.4000"
     },
     "scripts": {
-        "precommit": "tslint -c ../.tslintrc.js -p tsconfig.json -t verbose",
-        "compile": "tsc",
-        "server": "node Server.js"
+        "precommit": "tslint -c .tslintrc.js -p ./client/tsconfig.json -t verbose",
+        "compile": "npm-run-all compile:*",
+        "compile:server": "tsc -p ./server/tsconfig.json",
+        "compile:client": "tsc -p ./client/tsconfig.json",
+        "start": "node ./server/SimplyticsServer.js"
     }
 }
