--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "@types/express": "^4.16.1",
         "@types/socket.io": "^2.1.2",
         "express": "^4.15.2",
-        "socket.io": "^2.2.0"
+        "socket.io": "^2.2.0",
+        "uuid": "^3.3.2"
     },
     "devDependencies": {
         "http-server": "^0.11.1",
