--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     },
     "dependencies": {
         "@types/socket.io": "^2.1.2",
-        "socket.io": "^2.2.0"
+        "socket.io": "^2.2.0",
+        "uuid": "^3.3.2"
     },
     "devDependencies": {
         "http-server": "^0.11.1",
